Align the logos correctly

--- a/style.css
+++ b/style.css
@@ -12,8 +12,17 @@ body {
   box-sizing: border-box;
 }
 
-img {
-  height: 50px;
+.column {
+  float: left;
+  width: 50%;
+  padding: 5px;
+}
+
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
 }
 
 h1{
@@ -24,8 +33,8 @@ h1{
   font-family: sans-serif;
   font-style: normal;
   font-weight: bold;
-  font-size: 44px;
-  line-height: 40px;
+  font-size: 80px;
+  line-height: 80px;
 
   color: #00A0E0;
 }
@@ -34,13 +43,13 @@ h2 {
   margin-top: 10px;
   margin-left: 30px;
   
-  width: 219px;
+  /* width: 300px; */
   
   font-family: sans-serif;
   font-style: normal;
   font-weight: bold;
-  font-size: 18px;
-  line-height: 22px;
+  font-size: 85x;
+  line-height: 85px;
 
   color: #00A0E0;
 }
@@ -49,12 +58,12 @@ h2 {
   position: relative;  
   
   margin: 15px 15px 1px 30px;
-  height: 100px;
+  height: 300px;
 }
 
 .fruitbox img {
   border-radius: 15px;
-  height: 100px;
+  height: 300px;
   width: 100%;
 }
 
@@ -66,8 +75,8 @@ h2 {
   font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: bold;
-  font-size: 22px;
-  line-height: 26px;
+  font-size: 62px;
+  line-height: 70px;
   
   color: #fff;
 }
@@ -76,17 +85,16 @@ h2 {
   position: relative;  
   
   margin: 40px 15px 1px 30px;
-  height: 250px;  
+  height: 400px;  
 }
 
 .fruitpage img {
   border-radius: 15px;
-  height: 250px;
+  height: 400px;
   width: 100%;
 }
 
-
-.fruitpage h2{
+.fruitpagetext h2{
   position: absolute;
   bottom: 60px;
   margin-left: 30px;
@@ -94,23 +102,22 @@ h2 {
   font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: bold;
-  font-size: 42px;
-  line-height: 26px;
+  font-size: 60px;
+  line-height: 60px;
   
   color: #FFFFFF;
 }
 
-
-.fruitpage h3{
+.fruitpagetext h3{
   position: absolute;
   margin-left: 30px;
-  bottom: 40px;
+  bottom: 35px;
   
   font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: bold;
-  font-size: 15px;
-  line-height: 20px;
+  font-size: 30px;
+  line-height: 30px;
   
   color: #FFFFFF;
 }
